--- a/css/diploma2.css
+++ b/css/diploma2.css
@@ -21,6 +21,10 @@ h1, h2, h3 {
 	padding: 0;
 }
 
+/**/
+/*popup mobile отступы слева справа затестить черех git pages*/
+/*Владимира спросить про nth odd even, числительные как?, бургер*/
+
 /*--Header--*/
 .header {
 	color:  #ffffff;
@@ -93,13 +97,13 @@ h1, h2, h3 {
 	color:  #ffffff;
 }
 .menu__button {
-  width: 1.4em;
-  height: 1em;  
+  width: 1.26em;
+  height: 1em;
   border: none;
   padding: 0;
 
   background-color: transparent;
-  font-size: 25px;
+  font-size: 19px;
   position: relative;
   text-indent: -9999px;
   cursor: pointer;
@@ -148,6 +152,37 @@ h1, h2, h3 {
 	}
 	.header__menu {
 		display: none;
+	}
+}
+@media (max-width: 640px) {
+	.header {
+		background-image: url('../images/banner-mobile.jpeg');
+	}
+	.header__container {
+		padding-bottom: 220px;
+	}
+	.header__firstrow {
+		flex-direction: column-reverse;
+	}
+	.menu__button {
+		display: block;
+		margin-left: auto;
+	}
+	.header__menu {
+		display: none;
+	}
+	.header__logo {
+		padding: 185px 30px 0 30px;
+	}
+	.header__logo_img {
+		width: 100%; 
+	}
+	.header__text {
+		padding: 44px 30px 0 30px;
+		max-width: 100%;
+	}
+	.header__title {
+		font-size: 26px;
 	}
 }
 
@@ -237,22 +272,46 @@ h1, h2, h3 {
 		margin-top: 50px;
 		font-size: 18px;
 	  }
+	.trends__article_title {
+  	font-size: 17px;
+  }
 }
-@media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait){
+@media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait),
+ (max-width: 640px) and (orientation: landscape) {
   .trends {
   	flex-wrap: wrap;
   }
   .trends__article {
     width: calc(50vw - 4px);
+    margin-top: 4px;
   }
   .trends__article:nth-child(odd) {
     border: 0;
   }
-  .trends__article:nth-child(n+3) {
-    margin-top: 4px;
+  .trends__article1, .trends__article2{
+    margin-top: 0;
+  }
+}
+@media (max-width: 640px) {
+  .content__h2 {
+		margin-top: 44px;
+		font-size: 16px;
+	 }
+	.trends {
+  	flex-wrap: wrap;
   }
   .trends__article_title {
-  	font-size: 17px;
+  	font-size: 16px;
+  }
+}
+@media (max-width: 640px) and (orientation: portrait) {
+  .trends__article {
+    width: 100%;
+    border: 0;
+    margin-top: 3px;
+  }
+  .trends__article1 {
+    margin-top: 0;
   }
 }
 
@@ -332,24 +391,37 @@ h1, h2, h3 {
 	text-decoration: underline;
 }
 @media (min-width: 641px) and (max-width: 1199px) {
-  .goods {
-  	flex-wrap: wrap;
-  }
   .goods__article {
 		width: calc(50% - 21px);
-		margin: 0;
+		margin-top: 30px;
   }
   .goods__article:nth-child(even) {
   	margin-left: 21px;
   }
-  .goods__article:nth-child(n+3) {
-  	margin-top: 30px;
+  .goods__article1, .goods__article2 {
+  	margin-top: 0;
   }
   .goods__article_title {
   	font-size: 17px;
   }
 }
-
+@media (max-width: 1199px) {
+	.goods {
+  	flex-wrap: wrap;
+  }
+  .goods__article {
+		margin-left: 0;
+  }
+}
+@media (max-width: 640px) {
+	.goods__article {
+		width: 100%;
+		margin-top: 25px;
+	}
+	.goods__article1 {
+  	margin-top: 0;
+  }
+}
 
 /*--Content--*/
 .content {
@@ -424,8 +496,11 @@ h1, h2, h3 {
 	font-size: 15px;
 	line-height: 1.47;
 }
-.content__article_txt p:nth-child(n+2) {
+.content__article_txt p{
 	margin-top: 8px;
+}
+.content__article_txt_p_first{
+	margin-top: 0;
 }
 @media (min-width: 641px) and (max-width: 1199px) {
   .content {
@@ -438,37 +513,60 @@ h1, h2, h3 {
   	width: calc(100% - 272px);
   }
   .content__article {
-  	flex-direction: column;
   	margin-top: 42px;
+  }
+  .content__article_title {
+  	font-size: 17px;
+  } 
+  .content__article_txt {
+		margin-top: 39px;
+	}
+}
+@media (max-width: 1199px) {
+	.content__article {
+		flex-direction: column;
   	padding-bottom: 20px;
   	border-bottom: 4px solid #eeeeee;
   }
   .content__article_first {
   	margin-top: 0;
-  	padding-bottom: 20px;
-  	border-bottom: 4px solid #eeeeee;
   }
   .content__article_last {
   	padding-bottom: 0;
   	border-bottom: 0;
   }
   .content__article_title {
-  	font-size: 17px;
   	flex-grow: 1;
   }
   .content__article_text {
   	width: 100%;
-		padding: 17px 0 0 0;  
+		padding: 17px 15px 0 0;  
 		flex-grow: 1;
   } 
-  .content__article_txt {
-		margin-top: 39px;
-	}
-  .content__article_img {
+	.content__article_img {
 		max-width: 100%;
 	}
-
 }
+@media (max-width: 640px) {
+  .content {
+  	flex-direction: column;
+  	flex-wrap: wrap;
+  	padding: 44px 15px 0 15px;
+  }
+  .main {
+  	width: 100%;
+  }
+  .content__article {
+  	margin-top: 34px;
+  }
+  .content__article_title {
+  	font-size: 16px;
+  }
+  .content__article_txt {
+		margin-top: 25px;
+	}
+}
+
 
 /*--Sidebar--*/
 .sidebar {
@@ -649,6 +747,17 @@ h1, h2, h3 {
 	vertical-align: super;
 	color: #b59f5b;
 }
+@media (max-width: 640px) {
+	.sidebar {
+		width: 100%;
+	}
+	.sidebar__section {
+		margin: 44px 0 0 0;
+	}
+	.sidebar__title {
+		font-size: 16px;
+	}
+}
 
 /*--Footer--*/
 .footer__social {
@@ -720,6 +829,14 @@ h1, h2, h3 {
 	}
 	.footer__bottom {
 		padding: 52px 0 40px 0;
+	}
+}
+@media (max-width: 640px) {
+	.footer__social {
+		margin-top: 42px;
+	}
+	.footer__bottom {
+		padding: 52px 0 50px 0;
 	}
 }
 
@@ -860,4 +977,10 @@ h1, h2, h3 {
 	width: 100%;
 	height: 100%;
 	left: 0;
+}
+@media (max-width: 640px) {
+	.popup {
+		padding: 30px 24px;
+		width: 100%;
+	}
 }
