--- a/css/diploma2.css
+++ b/css/diploma2.css
@@ -273,7 +273,7 @@ h1, h2, h3 {
   }
 }
 @media (min-width: 641px) and (max-width: 1199px) and (orientation: portrait),
- (max-width: 640px) and (orientation: landscape) {
+ (max-height: 640px) and (orientation: landscape) {
   .trends {
   	flex-wrap: wrap;
   }
@@ -300,7 +300,7 @@ h1, h2, h3 {
   	font-size: 16px;
   }
 }
-@media (max-width: 640px) {
+@media (max-width: 640px) and (orientation: portrait) {
   .trends__article {
     width: 100%;
     border: 0;
